migrate presentation workflows to Go API
